<resources>
    <string name="app_name">ED Gamifica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="activity">Activity</string>
    <string name="person">Teacher</string>
    <string name="persontext">" Contact your Teacher"</string>
    <string name="scholl">Scholl</string>
    <string name="video">Video lessons</string>
    <string name="videotext">Learn by watching video lessons</string>
    <string name="amigos">Friends</string>
    <string name="acessar">Login</string>
    <string name="cadastrar">SignUp</string>
    <string name="sair">Exit</string>
    <string name="google_maps_key" translatable="false">AIzaSyCVzNNpjCnhqED7mLWwHvzNoi35GffZA68</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="about">"ED Gamifica Application part of a education startup that has been emerging in the market,
        with\n the development of the Web platform has emerged the need for an application for users to have access
        mobility.\n version 1.0\n "
    </string>
    <string name="utilizar">How to use?</string>
    <string name="aboututilizar">"Register, join a teacher and start using. "</string>
    <string name="information">Informação</string>
    <string name="activitytext">Do your daily activity</string>
    <string name="scholltext">"See the location of your school "</string>
    <string name="amigostext">Chat with your friends</string>
    <string name="senha">Password:</string>
    <string name="yotub" translatable="false">AIzaSyCVzNNpjCnhqED7mLWwHvzNoi35GffZA68</string>
    <string name="videoedu" translatable="false">gwjZT4EoDZ0</string>
    <string name="shareteacher" translatable="true">Share your Teacher</string>
    <string name="tellteacher" translatable="true">Tell how your Teacher</string>
</resources>
